# WestTrack-v2

./: .gitignore  README.md  package-lock.json
backend/: main.py  pyproject.toml  requirements.txt
backend/agentic/src/agentic/: runner.py
backend/agentic/src/agentic/dashboard/: setup.py
backend/agentic/src/agentic/tools/: __init__.py  base.py  rag_tool.py  uwo_tool.py  web_crawler.py
backend/agents/: academic_advisor.py  discord_agent.py  file.txt  file_reader.py  info.txt  memories.py  rag.py  weather.py
backend/tools/: academic_policy_4.txt  scraper.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ui/: Background.tsx  ChatBar.tsx  ChatBox.tsx  ChatComponents.tsx  ChatWindow.tsx  TypewriterEffect.tsx
